# crunch.concurrency.tasks

./: CMakeLists.txt  configure.cmake
benchmark/: work_stealing_queue_benchmarks.cpp
include/crunch/concurrency/: index_range.hpp  iterator_range.hpp  parallel_for.hpp  range.hpp  task.hpp  task_execution_context.hpp  task_scheduler.hpp  tasks_api.hpp  work_stealing_queue.hpp  work_stealing_scheduler.hpp
include/crunch/concurrency/detail/: scheduled_task.hpp  scheduled_task_execution_context.hpp  task_result.hpp
samples/fib/: CMakeLists.txt  main.cpp
source/: scheduled_task.cpp  task_scheduler.cpp  work_stealing_scheduler.cpp
test/: parallel_for_tests.cpp  task_scheduler_tests.cpp  work_stealing_queue_tests.cpp
